--- a/src/styles/partials/slider.sass
+++ b/src/styles/partials/slider.sass
@@ -4,6 +4,7 @@
         background-position: center
         background-repeat: no-repeat
         background-size: cover
+        min-height: 450px
         padding: 50px 0 35px
         @include breakpoint(medium down)
             padding-bottom: 40px
@@ -23,6 +24,8 @@
             padding-right: 0
         @media (max-width: 400px)
             font-size: 2.125rem
+        @media (max-width: 750px)
+            margin-right: 0
     &-slideDesc
         color: hsla(0, 0%, 100%, 0.7)
         font-size: 1.5rem
